# GVAR-Tools

./: .gitignore  CMakeLists.txt  GVAR_Demod.grc  Live_GVAR_Demod.grc  README.md
src/: derand.cpp  derand.h  dfif.cpp  diff.h  header.cpp  header.h  imagebuilder.cpp  imagebuilder.h  main.cpp  simpledeframer.cpp
utils/: syncgen.cpp
